--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,17 @@
 {
-    "extends": ["eslint:recommended", "prettier", "prettier/react"],
-    "plugins": [],
+    "extends": [
+        "eslint:recommended",
+        "plugin:import/errors",
+        "plugin:react/recommended",
+        "plugin:jsx-ally/recommended",
+        "prettier",
+        "prettier/react"
+    ],
+    "rules": {
+        "react/prop-types": 0,
+        "no-console": 1
+    },
+    "plugins": ["react", "import", "jsx-ally"],
     "parserOptions": {
         "ecmaVersion": 2018,
         "sourceType": "module",
@@ -12,5 +23,12 @@
         "es6": true,
         "browser": true,
         "node": true
+    },
+    "settings": {
+        "react": {
+            "react": {
+                "version": "detect"
+            }
+        }
     }
 }
