--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.0.4"
   },
   "dependencies": {
+    "@frontendmasters/pet": "^1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
