missing 2 last videoes in effect but everything is working so far

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@frontendmasters/pet": "^1.0.3",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
